# Rain-Australia

./: .gitignore  CLAUDE.md  create_presentation.py  main.py  presentation.pptx  presentation.tex  pyproject.toml  rain_prediction_australia.ipynb  run_models.py
.claude/: settings.local.json
document/: create_presentation.py  presentation.pptx  presentation.tex  ~$presentation.pptx
experiments/: tuning_results.json
