[project]
name = "rain-australia"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.8",
    "nbclient>=0.10.4",
    "nbconvert>=7.17.0",
    "numpy>=2.4.1",
    "optuna>=4.7.0",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "torch>=2.10.0",
]
